--- a/style.css
+++ b/style.css
@@ -23,13 +23,13 @@ body{
 	box-sizing: border-box;
 	padding:20px;
 	height:800px;
-	width:100vw;
+	width:auto;
 	background-color: lightgrey;
 	display: grid;
 }
 .book-list{
 	  display: grid;
-  grid-template-columns: repeat(8, 1fr);
+  grid-template-columns: repeat(6, 1fr);
   grid-column-gap: 40px;
 
 }
@@ -40,6 +40,7 @@ body{
 	text-align: center;
 	display: grid;
 	place-items:center;
+	border:5px solid ;
 }
 
 
